--- a/about.css
+++ b/about.css
@@ -5,7 +5,7 @@ body {
     background-size: cover;
     color: #ffffff;
     height: 100vh;
-    overflow: auto; /* allow scrolling */
+    overflow: auto;
 }
 
 .about-container {
@@ -18,39 +18,37 @@ body {
     flex: 0.6;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: flex-start;
-    padding: 20px;
+    padding: 40px;
+}
+
+.home-button-container {
+    width: 100%;
+    margin-bottom: 40px;
 }
 
 .home-button {
-    position: absolute;
-    top: 20px;
-    left: 20px;
     display: inline-block;
-    padding: 8px 16px;
+    padding: 10px 20px;
     border-radius: 5px;
-    font-weight: 400;
+    font-weight: 600;
     font-size: 16px;
-    line-height: 24px;
     color: #FFFFFF;
     text-decoration: none;
-    background-color: transparent;
-    z-index: 10;
+    background-color: #F52929;
 }
 
 .logo {
-    width: 200px;
+    width: 280px;
     height: auto;
-    margin-top: 60px;
-    margin-left: 20px;
+    margin-bottom: 20px;
 }
 
 .tagline {
-    font-size: 20px;
-    line-height: 30px;
-    margin-top: 10px;
-    margin-left: 20px;
+    font-size: 36px;
+    line-height: 40px;
+    margin-bottom: 40px;
 }
 
 .learn {
@@ -68,7 +66,7 @@ body {
 .left-bottom {
     display: flex;
     align-items: center;
-    margin-left: 20px;
+    margin-top: auto;
     margin-bottom: 40px;
 }
 
@@ -104,7 +102,7 @@ body {
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
-    padding: 20px;
+    padding: 40px;
     overflow-y: auto;
 }
 
@@ -113,7 +111,7 @@ body {
     flex-direction: column;
     align-items: flex-start;
     max-width: 80%;
-    margin-top: 60px;
+    margin-top: 40px;
 }
 
 .section-title {
