--- a/style.css
+++ b/style.css
@@ -37,110 +37,168 @@ body {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
   z-index: 0;
 }
 
 .hero {
+  position: relative;
   display: flex;
-  height: calc(100vh - 80px);
+  justify-content: space-between;
+  align-items: flex-end;
+  width: 100%;
+  max-width: 1200px;
   padding: 40px;
+  box-sizing: border-box;
+  height: calc(100vh - 80px);
 }
 
 .top-right {
   position: absolute;
   top: 20px;
-  right: 20px;
+  right: 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .top-right .nav-buttons a {
-  display: inline-block;
+  display: block;
   padding: 10px 20px;
-  margin-left: 10px;
+  margin-top: 10px;
   border-radius: 5px;
   font-weight: 600;
   font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
   color: #FFFFFF;
   text-decoration: none;
   background-color: #F52929;
+  width: 200px;
+  box-sizing: border-box;
 }
 
 .hero-content {
   display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
   width: 100%;
-  height: 100%;
+  max-width: 1200px;
+  min-height: 600px;
 }
 
 .hero-left {
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  padding-left: 40px;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 
 .ukno-info {
-  margin-bottom: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 60px;
 }
 
 .ukno-info .main-logo {
+  height: auto;
   width: 300px;
   margin-bottom: 20px;
 }
 
+.ukno-info .tagline {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
 .ukno-info .tagline .learn {
   font-size: 48px;
-  color: #F52929;
-  font-weight: 600;
   line-height: 1;
+  font-weight: 600;
+  color: #F52929;
+  margin-bottom: 5px;
 }
 
 .ukno-info .tagline .freely {
   font-size: 48px;
-  color: #FFFFFF;
-  font-weight: 600;
   line-height: 1;
+  font-weight: 600;
+  color: #FFFFFF;
 }
 
 .hero-left .social-icons {
   display: flex;
   gap: 15px;
+  margin-top: 30px;
 }
 
 .hero-left .social-icons a.icon {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 50px;
   height: 50px;
   border-radius: 50%;
   background-color: #FFFFFF;
+  filter: drop-shadow(0px 8px 16px rgba(0, 0, 0, 0.1));
+  text-decoration: none;
+}
+
+.hero-left .social-icons .icon.youtube {
+  background-image: url('assets/youtube.png');
+  background-size: 60%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.hero-left .social-icons .icon.instagram {
+  background-image: url('assets/instagram.png');
+  background-size: 60%;
+  background-repeat: no-repeat;
+  background-position: center;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.hero-left .social-icons .icon.linkedin {
+  background-image: url('assets/linkedin.png');
+  background-size: 60%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.hero-left .social-icons .icon.telegram {
+  background-image: url('assets/telegram.png');
+  background-size: 60%;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .hero-right {
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: flex-end;
-  padding-right: 40px;
+  justify-content: flex-end;
+  text-align: right;
 }
 
 .hero-right h1 {
   font-size: 48px;
+  line-height: 1.2;
+  font-weight: 700;
   margin-bottom: 20px;
-  text-align: right;
-}
-
-.hero-right h1 span:first-child {
-  color: #FFFFFF;
-}
-
-.hero-right h1 span:last-child {
-  color: #F52929;
+  white-space: nowrap;
 }
 
 .hero-right p {
-  max-width: 500px;
-  text-align: right;
+  font-size: 16px;
   line-height: 1.7;
+  text-align: right;
+  max-width: 500px;
 }
 
 .feature-icons-bar {
@@ -149,13 +207,23 @@ body {
   left: 0;
   width: 100%;
   background: rgba(0, 0, 0, 0.5);
-  padding: 20px;
+  color: #FFFFFF;
+  padding: 20px 20px;
   display: flex;
   justify-content: space-around;
+  align-items: center;
+  box-sizing: border-box;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.2;
+  text-transform: capitalize;
 }
 
 .feature-icon {
-  font-size: 20px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  text-align: center;
   white-space: nowrap;
 }
 
